Fixed tic tac toe sizing bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body,html{
 }
 
 .album {
-  min-height: 50rem; /* Can be removed; just added for demo purposes */
   padding-top: 3rem;
   padding-bottom: 3rem;
   background-color: #f7f7f7;
@@ -46,7 +45,7 @@ body,html{
 
 .album{
   background-color: #c6c6c6;
-  padding-bottom: 1000px;
+  padding-bottom: 200px;
 }
 
 .game-card:hover{
@@ -79,6 +78,7 @@ body,html{
 .card-text:hover {
   color: #444444;
 }
+
 .modal-body{
   display: grid;
   grid-template-columns: 1fr 1fr;
